tests/NormalTests/paczka1/small_fuzzy/14468225.err
Error in line 6: 8TCcL2t1 A622 17,3
Error in line 8: 8TCcL2t1 S165 49,0
Error in line 14: ZneSGWbYO A622 24,7
